headers and content hidden under top fixed menu
When linking with a hash parameter the h2 would be under the fixed menu
header along with a chunk of content. Push the h2 down to compensate and
put make the content visible.

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -108,6 +108,7 @@ h2, h3, h4, h5, h6 {
     font-weight: bold;
     margin-top: $paddingMini;
     margin-bottom: 0;
+    padding-top: 30px;
 }
 
 h2 { color: $textBrightest; }
